objects/Expense__c.object
<CustomObject>
    <label>Expense</label>
    <nameField>
        <displayFormat>Exp-{0000}</displayFormat>
        <label>Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AmountInWord__c</fullName>
        <formula>CASE(LEFT( RIGHT(TEXT( Amount__c ) ,6),1),

&quot;1&quot;,&quot;One Hundred &quot;,

&quot;2&quot;,&quot;Two Hundred &quot;,

&quot;3&quot;,&quot;Three Hundred &quot;,

&quot;4&quot;,&quot;Four Hundred &quot;,

&quot;5&quot;,&quot;Five Hundred &quot;,

&quot;6&quot;,&quot;Six Hundred &quot;,

&quot;7&quot;,&quot;Seven Hundred &quot;,

&quot;8&quot;,&quot;Eight Hundred &quot;,

&quot;9&quot;,&quot;Nine Hundred &quot;,

&quot;10&quot;,&quot;Ten Hundred &quot;,NULL)

&amp;

IF(

AND(VALUE(LEFT(RIGHT(TEXT( Amount__c ),5),2))&gt;9,

VALUE(LEFT(RIGHT(TEXT( Amount__c ),5),2))&lt;20),

CASE(LEFT(RIGHT(TEXT( Amount__c ),5),2),

&quot;10&quot;,&quot;Ten Thousand &quot;,

&quot;11&quot;,&quot;Eleven Thousand &quot;,

&quot;12&quot;,&quot;Twelve Thousand &quot;,

&quot;13&quot;,&quot;Thirteen Thousand &quot;,

&quot;14&quot;,&quot;Fourteen Thousand &quot;,

&quot;15&quot;,&quot;Fifteen Thousand &quot;,

&quot;16&quot;,&quot;Sixteen Thousand &quot;,

&quot;17&quot;,&quot;Seventeen Thousand &quot;,

&quot;18&quot;,&quot;Eighteen Thousand &quot;,

&quot;19&quot;,&quot;Nineteen Thousand &quot;,NULL),

CASE(LEFT(RIGHT(TEXT( Amount__c ),5),1),

&quot;2&quot;,&quot;Twenty &quot;,

&quot;3&quot;,&quot;Thirty &quot;,

&quot;4&quot;,&quot;Forty &quot;,

&quot;5&quot;,&quot;Fifty &quot;,

&quot;6&quot;,&quot;Sixty &quot;,

&quot;7&quot;,&quot;Seventy &quot;,

&quot;8&quot;,&quot;Eighty &quot;,

&quot;9&quot;,&quot;Ninety &quot;,NULL)

&amp;

CASE(LEFT(RIGHT(TEXT( Amount__c ),4),1),

&quot;0&quot;,&quot;Thousand&quot;,

&quot;1&quot;,&quot;One Thousand &quot;,

&quot;2&quot;,&quot;Two Thousand&quot;,

&quot;3&quot;,&quot;Three Thousand &quot;,

&quot;4&quot;,&quot;Four Thousand &quot;,

&quot;5&quot;,&quot;Five Thousand &quot;,

&quot;6&quot;,&quot;Six Thousand &quot;,

&quot;7&quot;,&quot;Seven Thousand &quot;,

&quot;8&quot;,&quot;Eight Thousand &quot;,

&quot;9&quot;,&quot;Nine Thousand &quot;,NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AmountInWord</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Meals</fullName>
                </value>
                <value>
                    <fullName>Office Supplies</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>